# KJK_Engine_Sandbox

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  licenses.txt  vcpkg.json
Engine/: CMakeLists.txt
Engine/src/: KJK  kjkpch.cpp  kjkpch.h
Engine/src/KJK_Engine/: Application.cpp  Application.h  EntryPoint.h  Logger.cpp  Logger.h
Engine/src/KJK_Engine/Core/: Application.cpp  Application.h  EntryPoint.h  Logger.h  Macros.h  Window.h
Engine/src/KJK_Engine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Playground/: CMakeLists.txt
Playground/assets/shaders/: BasicShader.frag  BorderShader.frag  Cubemap.frag  Cubemap.vert  DepthMapShader.frag  DistanceShader.frag  FrameBufferShader.frag  FrameBufferShader.vert  InstanceShader.frag  InstanceShader.vert  NormalVectorShader.geom  NormalVectorShader.vert  ReflectiveShader.frag  RefractiveShader.frag  backpackShader.frag  explode.geom  explodingDepthShader.geom  explodingDepthShader.vert  explodingPointDepthShader.geom  explodingPointDepthShader.vert  instancedDepthShader.vert  instancedPointDepthShader.vert  shader.vert  shader1.frag  shader2.frag  shaderExplode.vert  simpleDepthShader.frag  simpleDepthShader.vert  simplePointDepthShader.frag  simplePointDepthShader.geom  simplePointDepthShader.vert  transparentDepthShader.frag  transparentPointDepthShader.frag
Playground/src/: BaseModel.cpp  BaseModel.h  Camera.cpp  Camera.h  CubeModel.cpp  CubeModel.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PlaneModel.cpp  PlaneModel.h  Shader.cpp  Shader.h  main.cpp
Sandbox/: CMakeLists.txt
Sandbox/src/: main.cpp
src/: main.cpp
